--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: YXY Blog
 SEOTitle: 小隐于野 | YXY Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/home-sjtu-bg1.jpg
 email: asuka2013@sjtu.edu.cn
 description: "There are no shortcuts to any place worth going."
 keyword: "Augmented Reality, AR, Computer Vision, CV, ARToolkit, OpenCV, Osgart, ALVAR, SLAM"
