--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ sidebar-avatar: /img/about-me.jpg      # use absolute URL, seeing it's used in b
 
 # SNS settings
 RSS: true
-weibo_username:     1645184811
-zhihu_username:     SJTUdodoro
-github_username:    YXY1988
-csdn_username:      SJTU_dodoro
+#weibo_username:     1645184811
+#zhihu_username:     
+#github_username:    YXY1988
+#csdn_username:      
 #facebook_username:
 #jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
